# todu-workflow

./: CODING.md  README.md
docs/: WORKFLOW.md  skill-evals.md  testing.md
extensions/: repo-create.ts
skills/: VENDORED.md
skills/brave-search/: SKILL.md
skills/browser-tools/: SKILL.md
skills/dev-environment/: SKILL.md
skills/dev-environment/templates/: Makefile  Procfile-with-db-redis.dev  Procfile-with-db.dev  Procfile-with-redis.dev  Procfile.dev  env-postgres-redis.example  env-postgres.example  env-redis.example  env.example
skills/electron-testing/: SKILL.md
skills/electron-testing/scripts/: interact.js  launch.sh  stop.sh
skills/habit-perform/: SKILL.md
skills/nextactions/: SKILL.md
skills/pr-review/: SKILL.md  pr-fj-review.md  pr-gh-review.md  pr-review-common.md
skills/project-init/: SKILL.md
skills/project-init/references/: commit-and-tasks.md  existing-project-rerun.md  new-project-flow.md  project-location.md
skills/project-scaffold/: SKILL.md
skills/quality-tooling/: SKILL.md
skills/quality-tooling/templates/: pre-commit-config.yaml
skills/quality-tooling/templates/python/: pre-pr.sh  pyproject.toml  ruff.toml  test_example.py
skills/repo-create/: SKILL.md
skills/request-review/: SKILL.md
skills/task-authoring/: SKILL.md
skills/task-close-gate/: SKILL.md
skills/task-close-preflight/: SKILL.md
skills/task-comment-authoring/: SKILL.md
skills/task-perform/: SKILL.md
skills/task-pipeline/: DEFAULT_CONTRIBUTING.md  SKILL.md
skills/task-start-preflight/: OLD-SKILL.md  SKILL.md
skills/tmux/: ADVANCED.md  SKILL.md
(+37 files in other folders)
